完成了图片页面和动画页面设计

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="./res/layui/css/layui.css" rel="stylesheet">
 </head>
 
-<body>
+<body style="width: 800px; height: 600px;">
     <div id="LAY_app"></div>
     <script src="./res/layui/layui.js"></script>
     <script>
