完成了图片预览

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             base: 'res/', // 静态资源所在路径
             version: '1.9.0'
         }).use('index', function () {
-            var layer = layui.layer;
-            var admin = layui.admin;
+            window.layer = layui.layer;
+            window.$ = layui.$;
+            window.admin = layui.admin;
             window.G_FILE = null;
             window.GINFO_FILE = null;
             window.A_FILE = null;
